<webview>: Correctly shift focus between WebContents.

http://crrev.com/408445 Fixes some cases of keyboard input but required
a renderer initiated frame focus change in order to do so.

This change assumes that the browser is the primary driver of
WebContents level focus changes. The leftover FrameHost*::OnFrameFocused
is left so that an embedder can script aWebview.focus() to give focus.

BUG=660044
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2451143003
Cr-Commit-Position: refs/heads/master@{#432781}

Former-commit-id: 9993fca0084ba71c628918b384ac701fe6514e44