content/browser/renderer_host/render_widget_host_delegate.h
@@ -219,6 +219,23 @@ class CONTENT_EXPORT RenderWidgetHostDelegate {
   // Allow the delegate to handle the cursor update. Returns true if handled.
   virtual bool OnUpdateDragCursor();
 
+  // Inner WebContents Helpers -------------------------------------------------
+  //
+  // These functions are helpers in managing a hierharchy of WebContents
+  // involved in rendering inner WebContents.
+
+  // Get the RenderWidgetHost that should receive page level focus events. This
+  // will be the widget that is rendering the main frame of the currently
+  // focused WebContents.
+  virtual RenderWidgetHostImpl* GetRenderWidgetHostWithPageFocus();
+
+  // In cases with multiple RenderWidgetHosts involved in rendering a page, only
+  // one widget should be focused and active. This ensures that
+  // |render_widget_host| is focused and that its owning WebContents is also
+  // the focused WebContents.
+  virtual void FocusOwningWebContents(
+      RenderWidgetHostImpl* render_widget_host) {}
+
  protected:
   virtual ~RenderWidgetHostDelegate() {}
 };
